# avion

./: .gitignore  .gitmodules  CMakeLists.txt  DEVLOG.md  README.md  TODO.MD  TODO.md  TODO.txt  run.sh
AvionEngineCore/: CMakeLists.txt
AvionEngineCore/includes/AvionEngineCore/: macro.h
AvionEngineCore/includes/AvionEngineCore/api/backend/: backend.hpp  renderstate.hpp
AvionEngineCore/includes/AvionEngineCore/api/opengl/: opengl_renderer.hpp
AvionEngineCore/includes/AvionEngineCore/controller/: controller.hpp
AvionEngineCore/includes/AvionEngineCore/core/: engine.hpp  light.hpp  material.hpp  object.hpp  profiler.hpp  resource_manager.hpp  scene.hpp  texture.hpp  window.hpp
AvionEngineCore/includes/AvionEngineCore/gui/: widget.hpp
AvionEngineCore/includes/AvionEngineCore/logger/: logger.hpp
AvionEngineCore/includes/AvionEngineCore/render/: camera.hpp  gui.hpp  object.hpp  render.hpp  renderer.hpp  scene.hpp  shader.hpp  text_rendering.hpp  window.hpp
AvionEngineCore/includes/AvionEngineCore/renderer/: camera.hpp  framebuffer.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  pipeline.hpp  pipeline_queue.hpp  renderer.hpp  renderer_command.hpp  shader.hpp  text_rendering.hpp  transform.hpp
AvionEngineCore/src/AvionEngineCore/controller/: controller.cpp
AvionEngineCore/src/AvionEngineCore/core/: engine.cpp  light.cpp  material.cpp  object.cpp  resource_manager.cpp  scene.cpp  texture.cpp  window.cpp
AvionEngineCore/src/AvionEngineCore/gui/: widget.cpp
AvionEngineCore/src/AvionEngineCore/logger/: logger.cpp
AvionEngineCore/src/AvionEngineCore/render/: camera.cpp  gui.cpp  object.cpp  render.cpp  renderer.cpp  scene.cpp  shader.cpp  text_rendering.cpp  window.cpp
AvionEngineCore/src/AvionEngineCore/renderer/: camera.cpp  framebuffer.cpp  mesh.cpp  model.cpp  pipeline.cpp  pipeline_queue.cpp  renderer.cpp  renderer_command.cpp  shader.cpp  text_rendering.cpp
AvionEngineCore/src/AvionEngineCore/shaders/: ligth_shader.fs  shader.fs  shader.vs
AvionEngineEditor/: CMakeLists.txt
AvionEngineEditor/includes/AvionEngineEditor/editor/: editor_app.hpp  editor_context.hpp  editor_gui.hpp
AvionEngineEditor/includes/AvionEngineEditor/panels/: asset_panel.hpp  hierarchy_panel.hpp  inspector_panel.hpp  profiler_panel.hpp  scene_panel.hpp
AvionEngineEditor/includes/AvionEngineEditor/ui/: av_gui_child.hpp  av_gui_combo_item.hpp  av_gui_context.hpp  av_gui_scoped_window.hpp  av_gui_tab_bar.hpp  av_gui_tab_item.hpp  av_gui_tree_node.hpp
AvionEngineEditor/includes/AvionEngineEditor/ui/utils/: imgui_helper.hpp
AvionEngineEditor/includes/AvionEngineEditor/widget/: widget.hpp
AvionEngineEditor/src/AvionEngineEditor/editor/: editor_app.cpp  editor_gui.cpp
AvionEngineEditor/src/AvionEngineEditor/panels/: asset_panel.cpp  hierarchy_panel.cpp  inspector_panel.cpp  profiler_panel.cpp  scene_panel.cpp
AvionEngineEditor/src/AvionEngineEditor/ui/: av_gui_child.cpp  av_gui_combo_item.cpp  av_gui_context.cpp  av_gui_scoped_window.cpp  av_gui_tab_bar.cpp  av_gui_tab_item.cpp  av_gui_tree_node.cpp
AvionEngineEditor/src/AvionEngineEditor/ui/utils/: imgui_helper.cpp
AvionEngineEditor/src/AvionEngineEditor/widget/: widget.cpp
AvionEngineTest/: CMakeLists.txt
AvionEngineTest/src/: editor.cpp  main.cpp  sandbox.cpp
assets/config/: imgui.ini
assets/models/cyberpunk_model_female/: material.mtl
assets/models/freeman/: gordon.mtl
assets/models/woman/: woman.mtl
assets/shaders/: frag_model.frag  grass.frag  grass.vert  lighting.frag  select_single_color.frag  select_single_color.vert  select_single_model.frag  simple_cube_transform.vert  simple_light_color.frag  simple_light_transform.vert  text.frag  vert_model.vert
